--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,21 +4,21 @@
    "version": "2.0.0",
    "tasks": [
       {
-         "label": "build-debug",
+         "label": "--build-debug",
          "type": "shell",
-         "command": "& make CFG_NAME=debug & exit",
+         "command": "& bash -c \"make CFG_NAME=debug\" & exit",
          "group": "build"
       },
       {
-         "label": "clean-all",
+         "label": "--clean-all",
          "type": "shell",
-         "command": "& make clean & exit",
+         "command": "& bash -c \"make clean\" & exit",
          "group": "build"
       },
       {
-         "label": "rebuild-debug",
+         "label": "--rebuild-debug",
          "type": "shell",
-         "command": "& make -B CFG_NAME=debug & exit",
+         "command": "& bash -c \"make -B CFG_NAME=debug\" & exit",
          "group": "build"
       }
    ],
